refactoring of game specific folder structure

--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -20,23 +20,23 @@
 <script src="js/scene/control/position/heightHalf.js"></script>
 <script src="js/scene/control/position/__400.js"></script>
 <script src="js/scene/control/position/getTopRaster.js"></script>
-<script src="js/scene/control/position/ShieldsHelper.js"></script>
-<script src="js/scene/control/position/EnergyBarHelper.js"></script>
-<script src="js/scene/control/position/LifeHelper.js"></script>
-<script src="js/scene/control/position/CountHelper.js"></script>
-<script src="js/scene/control/position/ShipHelper.js"></script>
-<script src="js/scene/control/position/FireHelper.js"></script>
-<script src="js/scene/control/position/CountHelper.js"></script>
-<script src="js/scene/control/position/BackGroundHelper.js"></script>
-<script src="js/scene/control/position/SpeedStripesHelper.js"></script>
-<script src="js/scene/control/position/GameStuffHelper.js"></script>
-<script src="js/scene/control/EnergyStateMachine.js"></script>
-<script src="js/scene/control/GameWorld.js"></script>
+<script src="js/scene/viewhelper/ShieldsHelper.js"></script>
+<script src="js/scene/viewhelper/EnergyBarHelper.js"></script>
+<script src="js/scene/viewhelper/LifeHelper.js"></script>
+<script src="js/scene/viewhelper/CountHelper.js"></script>
+<script src="js/scene/viewhelper/ShipHelper.js"></script>
+<script src="js/scene/viewhelper/FireHelper.js"></script>
+<script src="js/scene/viewhelper/CountHelper.js"></script>
+<script src="js/scene/viewhelper/BackGroundHelper.js"></script>
+<script src="js/scene/viewhelper/SpeedStripesHelper.js"></script>
+<script src="js/scene/viewhelper/GameStuffHelper.js"></script>
+<script src="js/scene/component/EnergyStateMachine.js"></script>
+<script src="js/scene/component/GameWorld.js"></script>
 <script src="js/scene/control/CanvasCollisionDetector.js"></script>
-<script src="js/scene/control/ScoreView.js"></script>
-<script src="js/scene/control/CollectView.js"></script>
-<script src="js/scene/control/OdometerView.js"></script>
-<script src="js/scene/control/Odometer.js"></script>
+<script src="js/scene/component/ScoreView.js"></script>
+<script src="js/scene/component/CollectView.js"></script>
+<script src="js/scene/component/OdometerView.js"></script>
+<script src="js/scene/component/Odometer.js"></script>
 <script src="js/scene/control/ScreenShaker.js"></script>
 <script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
@@ -58,18 +58,18 @@
 <script src="js/render/intern/MotionDirector.js"></script>
 <script src="js/render/intern/MotionStudio.js"></script>
 <script src="js/render/Transition.js"></script>
-<script src="js/scene/Credits.js"></script>
+<script src="js/scene/myscenes/Credits.js"></script>
 <script src="js/scene/control/range.js"></script>
-<script src="js/scene/control/ObstaclesView.js"></script>
+<script src="js/scene/component/ObstaclesView.js"></script>
 <script src="js/scene/control/LevelModel.js"></script>
-<script src="js/scene/GetReady.js"></script>
-<script src="js/scene/Intro.js"></script>
-<script src="js/scene/KillScreen.js"></script>
-<script src="js/scene/InGameTutorial.js"></script>
-<script src="js/scene/PlayGame.js"></script>
-<script src="js/scene/PostGame.js"></script>
-<script src="js/scene/PreGame.js"></script>
-<script src="js/scene/StartingPosition.js"></script>
+<script src="js/scene/myscenes/GetReady.js"></script>
+<script src="js/scene/myscenes/Intro.js"></script>
+<script src="js/scene/myscenes/KillScreen.js"></script>
+<script src="js/scene/myscenes/InGameTutorial.js"></script>
+<script src="js/scene/myscenes/PlayGame.js"></script>
+<script src="js/scene/myscenes/PostGame.js"></script>
+<script src="js/scene/myscenes/PreGame.js"></script>
+<script src="js/scene/myscenes/StartingPosition.js"></script>
 <script src="js/scene/Tutorial.js"></script>
 <script src="js/scene/SceneManager.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
