--- a/www/index.html
+++ b/www/index.html
@@ -18,14 +18,14 @@
 <script src="js/resizeutils/changeCoords.js"></script>
 <script src="js/resizeutils/changeTouchable.js"></script>
 <script src="js/resizeutils/fetchDrawableIntoTouchable.js"></script>
-<script src="js/scene/control/position/calcScreenConst.js"></script>
-<script src="js/scene/control/position/widthHalf.js"></script>
-<script src="js/scene/control/position/heightHalf.js"></script>
-<script src="js/scene/control/position/__400.js"></script>
-<script src="js/scene/control/position/getTopRaster.js"></script>
-<script src="js/scene/control/position/fontSize_15.js"></script>
-<script src="js/scene/control/position/fontSize_10.js"></script>
-<script src="js/scene/control/position/fontSize_30.js"></script>
+<script src="js/scene/position/calcScreenConst.js"></script>
+<script src="js/scene/position/widthHalf.js"></script>
+<script src="js/scene/position/heightHalf.js"></script>
+<script src="js/scene/position/__400.js"></script>
+<script src="js/scene/position/getTopRaster.js"></script>
+<script src="js/scene/position/fontSize_15.js"></script>
+<script src="js/scene/position/fontSize_10.js"></script>
+<script src="js/scene/position/fontSize_30.js"></script>
 <script src="js/scene/viewhelper/ShieldsHelper.js"></script>
 <script src="js/scene/viewhelper/EnergyBarHelper.js"></script>
 <script src="js/scene/viewhelper/LifeHelper.js"></script>
