--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -15,11 +15,11 @@
 <script src="js/resizeutils/changePath.js"></script>
 <script src="js/resizeutils/changeCoords.js"></script>
 <script src="js/resizeutils/changeTouchable.js"></script>
-<script src="js/scene/control/position/calcScreenConst.js"></script>
-<script src="js/scene/control/position/widthHalf.js"></script>
-<script src="js/scene/control/position/heightHalf.js"></script>
-<script src="js/scene/control/position/__400.js"></script>
-<script src="js/scene/control/position/getTopRaster.js"></script>
+<script src="js/scene/position/calcScreenConst.js"></script>
+<script src="js/scene/position/widthHalf.js"></script>
+<script src="js/scene/position/heightHalf.js"></script>
+<script src="js/scene/position/__400.js"></script>
+<script src="js/scene/position/getTopRaster.js"></script>
 <script src="js/scene/viewhelper/ShieldsHelper.js"></script>
 <script src="js/scene/viewhelper/EnergyBarHelper.js"></script>
 <script src="js/scene/viewhelper/LifeHelper.js"></script>
