--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -45,23 +45,22 @@
 <script src="js/platform/FullScreenController.js"></script>
 <script src="js/input/PushReleaseHandler.js"></script>
 <script src="js/input/TapHandler.js"></script>
-<script src="js/render/intern/entity/CanvasText.js"></script>
+<script src="js/render/intern/entity/TextWrapper.js"></script>
 <script src="js/render/intern/entity/Drawable.js"></script>
 <script src="js/render/intern/entity/Drawables.js"></script>
 <script src="js/render/intern/entity/Path.js"></script>
 <script src="js/render/intern/entity/Paths.js"></script>
-<script src="js/render/intern/SpriteAnimationStudio.js"></script>
-<script src="js/render/intern/SpriteAnimationDirector.js"></script>
+<script src="js/render/intern/SpriteAnimations.js"></script>
+<script src="js/render/intern/SpriteAnimationTimer.js"></script>
 <script src="js/render/intern/entity/Sprite.js"></script>
 <script src="js/render/intern/entity/Sprites.js"></script>
-<script src="js/render/StageDirector.js"></script>
-<script src="js/render/intern/MotionDirector.js"></script>
-<script src="js/render/intern/MotionStudio.js"></script>
+<script src="js/render/Stage.js"></script>
+<script src="js/render/intern/MotionTimer.js"></script>
+<script src="js/render/intern/Motions.js"></script>
 <script src="js/render/Transition.js"></script>
 <script src="js/scene/myscenes/Credits.js"></script>
 <script src="js/scene/control/range.js"></script>
 <script src="js/scene/component/ObstaclesView.js"></script>
-<script src="js/scene/control/LevelModel.js"></script>
 <script src="js/scene/myscenes/GetReady.js"></script>
 <script src="js/scene/myscenes/Intro.js"></script>
 <script src="js/scene/myscenes/KillScreen.js"></script>
@@ -70,13 +69,11 @@
 <script src="js/scene/myscenes/PostGame.js"></script>
 <script src="js/scene/myscenes/PreGame.js"></script>
 <script src="js/scene/myscenes/StartingPosition.js"></script>
-<script src="js/scene/Tutorial.js"></script>
 <script src="js/scene/SceneManager.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
-<script src="js/screen/ScreenSizer.js"></script>
 <script src="js/screen/ResizeBus.js"></script>
 <script src="js/render/intern/entity/SubImage.js"></script>
-<script src="js/render/AtlasMapper.js"></script>
+<script src="js/render/AtlasCache.js"></script>
 <script src="js/render/intern/AtlasRenderer.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
