--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,9 @@
 <body>
 
 <script src="js/lib/howler.js"></script>
+<script src="js/utils/iterateEntries.js"></script>
+<script src="js/utils/iterateSomeEntries.js"></script>
+<script src="js/utils/concatenateProperties.js"></script>
 
 <script src="js/net/resolveAtlasPaths.js"></script>
 
@@ -114,7 +117,7 @@
 <script src="js/render/intern/animation/PropertyAnimations.js"></script>
 <script src="js/render/intern/sprite/SpriteAnimations.js"></script>
 <script src="js/render/intern/sprite/SpriteTimer.js"></script>
-<script src="js/render/intern/inheritMethods.js"></script>
+<script src="js/utils/inheritMethods.js"></script>
 <script src="js/render/intern/motion/MotionHelper.js"></script>
 <script src="js/render/intern/motion/MotionTimer.js"></script>
 <script src="js/render/intern/motion/Motions.js"></script>
@@ -131,7 +134,7 @@
 <script src="js/render/AtlasCache.js"></script>
 
 <script src="js/scene/myscenes/Credits.js"></script>
-<script src="js/scene/control/range.js"></script>
+<script src="js/utils/range.js"></script>
 <script src="js/scene/component/ObstaclesView.js"></script>
 <script src="js/scene/component/LevelGenerator.js"></script>
 <script src="js/scene/myscenes/GetReady.js"></script>
