--- a/www/index.html
+++ b/www/index.html
@@ -13,11 +13,15 @@
 <script src="js/utils/iterateSomeEntries.js"></script>
 <script src="js/utils/concatenateProperties.js"></script>
 <script src="js/utils/getFunctionName.js"></script>
+<script src="js/utils/Vectors.js"></script>
 
 <script src="js/net/resolveAtlasPaths.js"></script>
 
 <script src="js/audio/SoundFilesManager.js"></script>
 <script src="js/audio/SoundSpriteManager.js"></script>
+
+<script src="js/render/intern/motion/entity/Line.js"></script>
+<script src="js/render/intern/motion/entity/BezierCurve.js"></script>
 
 <script src="js/resizeutils/Repository.js"></script>
 <script src="js/resizeutils/changePath.js"></script>
@@ -121,6 +125,7 @@
 <script src="js/utils/inheritMethods.js"></script>
 <script src="js/render/intern/motion/MotionHelper.js"></script>
 <script src="js/render/intern/motion/MotionTimer.js"></script>
+<script src="js/render/intern/motion/calcBezierPoint.js"></script>
 <script src="js/render/intern/motion/Motions.js"></script>
 
 <script src="js/render/intern/draw/wrapText.js"></script>
