--- a/www/index.html
+++ b/www/index.html
@@ -125,6 +125,7 @@
 <script src="js/utils/inheritMethods.js"></script>
 <script src="js/render/intern/motion/MotionHelper.js"></script>
 <script src="js/render/intern/motion/MotionTimer.js"></script>
+<script src="js/render/intern/motion/calcLinePoint.js"></script>
 <script src="js/render/intern/motion/calcBezierPoint.js"></script>
 <script src="js/render/intern/motion/Motions.js"></script>
 
