--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,8 @@
 <script src="js/scene/position/size/fontSize_10.js"></script>
 <script src="js/scene/position/size/fontSize_15.js"></script>
 <script src="js/scene/position/size/fontSize_30.js"></script>
+<script src="js/scene/position/size/fontSize_35.js"></script>
+<script src="js/scene/position/size/fontSize_40.js"></script>
 <script src="js/scene/position/size/fontSize_60.js"></script>
 
 <script src="js/scene/position/width/width.js"></script>
