in game adaptions & play game factory refactoring #game

--- a/www/index.html
+++ b/www/index.html
@@ -138,6 +138,7 @@
 <script src="js/scene/component/ObstaclesView.js"></script>
 <script src="js/scene/component/LevelGenerator.js"></script>
 <script src="js/scene/component/ButtonFactory.js"></script>
+<script src="js/scene/component/PlayFactory.js"></script>
 <script src="js/scene/myscenes/GetReady.js"></script>
 <script src="js/scene/myscenes/Intro.js"></script>
 <script src="js/scene/myscenes/KillScreen.js"></script>
