--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -7,59 +7,139 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-<canvas id="screen" width="100" height="100"></canvas>
-
 <script src="console-log-viewer.js"></script>
+
+<script src="js/lib/howler.js"></script>
+<script src="js/utils/iterateEntries.js"></script>
+<script src="js/utils/iterateSomeEntries.js"></script>
+<script src="js/utils/concatenateProperties.js"></script>
+<script src="js/utils/getFunctionName.js"></script>
+<script src="js/utils/Vectors.js"></script>
+
+<script src="js/net/resolveAtlasPaths.js"></script>
+
+<script src="js/audio/SoundFilesManager.js"></script>
+<script src="js/audio/SoundSpriteManager.js"></script>
+
+<script src="js/render/intern/motion/entity/Line.js"></script>
+<script src="js/render/intern/motion/entity/BezierCurve.js"></script>
 
 <script src="js/resizeutils/Repository.js"></script>
 <script src="js/resizeutils/changePath.js"></script>
 <script src="js/resizeutils/changeCoords.js"></script>
 <script src="js/resizeutils/changeTouchable.js"></script>
+<script src="js/resizeutils/changeRectangle.js"></script>
+<script src="js/resizeutils/changeMask.js"></script>
+<script src="js/resizeutils/fetchDrawableIntoTouchable.js"></script>
+
 <script src="js/scene/position/calcScreenConst.js"></script>
-<script src="js/scene/position/width/widthHalf.js"></script>
-<script src="js/scene/position/height/heightHalf.js"></script>
-<script src="js/scene/position/height/__400.js"></script>
-<script src="js/scene/position/height/getTopRaster.js"></script>
-<script src="js/scene/viewhelper/ShieldsHelper.js"></script>
-<script src="js/scene/viewhelper/EnergyBarHelper.js"></script>
-<script src="js/scene/viewhelper/LifeHelper.js"></script>
-<script src="js/scene/viewhelper/CountHelper.js"></script>
-<script src="js/scene/viewhelper/ShipHelper.js"></script>
-<script src="js/scene/viewhelper/FireHelper.js"></script>
-<script src="js/scene/viewhelper/CountHelper.js"></script>
-<script src="js/scene/viewhelper/BackGroundHelper.js"></script>
+<script src="js/scene/position/add.js"></script>
+<script src="js/scene/position/changeSign.js"></script>
+<script src="js/scene/position/subtract.js"></script>
+<script src="js/scene/position/multiply.js"></script>
+<script src="js/scene/position/zero.js"></script>
+<script src="js/scene/position/wrap.js"></script>
+
+<script src="js/scene/position/Height.js"></script>
+<script src="js/scene/position/Width.js"></script>
+<script src="js/scene/position/Font.js"></script>
+
+<script src="js/render/Transition.js"></script>
+<script src="js/scene/viewhelper/drawShip.js"></script>
+<script src="js/scene/viewhelper/drawBackGround.js"></script>
+<script src="js/scene/viewhelper/Fire.js"></script>
 <script src="js/scene/viewhelper/drawSpeedStripes.js"></script>
+<script src="js/scene/viewhelper/drawShields.js"></script>
 <script src="js/scene/viewhelper/drawSharedGameStuff.js"></script>
+<script src="js/scene/viewhelper/ScoreBoard.js"></script>
+<script src="js/scene/viewhelper/EnergyBar.js"></script>
+
+<script src="js/scene/component/EnergyBarView.js"></script>
 <script src="js/scene/component/EnergyStateMachine.js"></script>
 <script src="js/scene/component/GameWorld.js"></script>
-<script src="js/scene/control/CanvasCollisionDetector.js"></script>
+
+<script src="js/render/intern/draw/entity/RectangleMask.js"></script>
+
+<script src="js/scene/component/ShieldsHitView.js"></script>
+<script src="js/scene/component/ShipHitView.js"></script>
+<script src="js/scene/component/LivesView.js"></script>
 <script src="js/scene/component/ScoreView.js"></script>
 <script src="js/scene/component/CollectView.js"></script>
 <script src="js/scene/component/OdometerView.js"></script>
 <script src="js/scene/component/Odometer.js"></script>
+
 <script src="js/scene/component/ScreenShaker.js"></script>
+
 <script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
 <script src="js/platform/requestAnimationFrame.js"></script>
 <script src="js/platform/BrowserOracle.js"></script>
 <script src="js/platform/FullScreenController.js"></script>
+
+<script src="js/input/entity/Touchable.js"></script>
+<script src="js/input/entity/Touchables.js"></script>
+<script src="js/input/isHit.js"></script>
+<script src="js/input/entity/GamePad.js"></script>
+<script src="js/input/entity/Key.js"></script>
+<script src="js/input/DragHandler.js"></script>
 <script src="js/input/PushReleaseHandler.js"></script>
 <script src="js/input/TapHandler.js"></script>
+<script src="js/input/KeyPushReleaseHandler.js"></script>
+<script src="js/input/KeyHandler.js"></script>
+<script src="js/input/GamePadHandler.js"></script>
+
+<script src="js/render/intern/measureText.js"></script>
+<script src="js/render/intern/draw/entity/SubImage.js"></script>
+<script src="js/render/intern/draw/entity/ImageWrapper.js"></script>
 <script src="js/render/intern/draw/entity/TextWrapper.js"></script>
+<script src="js/render/intern/draw/entity/Rectangle.js"></script>
 <script src="js/render/intern/draw/entity/Drawable.js"></script>
 <script src="js/render/intern/draw/entity/Drawables.js"></script>
+
+<script src="js/render/intern/animation/entity/Animation.js"></script>
+<script src="js/render/intern/animation/entity/Animations.js"></script>
 <script src="js/render/intern/motion/entity/Paths.js"></script>
-<script src="js/render/intern/sprite/SpriteAnimations.js"></script>
-<script src="js/render/intern/sprite/SpriteTimer.js"></script>
 <script src="js/render/intern/sprite/entity/Sprite.js"></script>
 <script src="js/render/intern/sprite/entity/Sprites.js"></script>
-<script src="js/render/Stage.js"></script>
+
+<script src="js/render/intern/CanvasImageCollisionDetector.js"></script>
+<script src="js/render/intern/animation/BasicAnimations.js"></script>
+<script src="js/render/intern/animation/AnimationHelper.js"></script>
+<script src="js/render/intern/animation/AnimationTimer.js"></script>
+<script src="js/render/intern/animation/PropertyAnimations.js"></script>
+<script src="js/render/intern/sprite/SpriteAnimations.js"></script>
+<script src="js/render/intern/sprite/SpriteTimer.js"></script>
+<script src="js/utils/inheritMethods.js"></script>
+<script src="js/render/intern/motion/MotionHelper.js"></script>
 <script src="js/render/intern/motion/MotionTimer.js"></script>
+<script src="js/render/intern/motion/calcLinePoint.js"></script>
+<script src="js/render/intern/motion/calcBezierPoint.js"></script>
 <script src="js/render/intern/motion/Motions.js"></script>
-<script src="js/render/Transition.js"></script>
+
+<script src="js/render/intern/draw/wrapText.js"></script>
+<script src="js/render/intern/draw/renderPolygon.js"></script>
+<script src="js/render/intern/draw/renderImage.js"></script>
+<script src="js/render/intern/draw/renderAtlas.js"></script>
+<script src="js/render/intern/draw/renderText.js"></script>
+<script src="js/render/intern/draw/renderCircle.js"></script>
+<script src="js/render/intern/draw/renderCurve.js"></script>
+<script src="js/render/intern/draw/renderHexagon.js"></script>
+<script src="js/render/intern/draw/renderLine.js"></script>
+<script src="js/render/intern/draw/renderRectangle.js"></script>
+<script src="js/render/intern/draw/Renderer.js"></script>
+<script src="js/render/intern/CallbackTimer.js"></script>
+
+<script src="js/render/Stage.js"></script>
+<script src="js/render/ResizableStage.js"></script>
+<script src="js/render/ImageCache.js"></script>
+<script src="js/render/AtlasCache.js"></script>
+
 <script src="js/scene/myscenes/Credits.js"></script>
 <script src="js/utils/range.js"></script>
 <script src="js/scene/component/ObstaclesView.js"></script>
+<script src="js/scene/component/LevelGenerator.js"></script>
+<script src="js/scene/component/ButtonFactory.js"></script>
+<script src="js/scene/component/PlayFactory.js"></script>
 <script src="js/scene/myscenes/GetReady.js"></script>
 <script src="js/scene/myscenes/Intro.js"></script>
 <script src="js/scene/myscenes/KillScreen.js"></script>
@@ -69,15 +149,27 @@
 <script src="js/scene/myscenes/PreGame.js"></script>
 <script src="js/scene/myscenes/StartingPosition.js"></script>
 <script src="js/scene/SceneManager.js"></script>
+<script src="js/scene/myscenes/installMyScenes.js"></script>
+<script src="js/app/GameLoop.js"></script>
+<script src="js/app/bootstrap/installLoop.js"></script>
+<script src="js/render/bootstrap/StageFactory.js"></script>
+<script src="js/render/bootstrap/AtlasResourceHelper.js"></script>
+<script src="js/render/bootstrap/ImageResourceHelper.js"></script>
+<script src="js/MyGameResources.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
 <script src="js/screen/ResizeBus.js"></script>
-<script src="js/render/intern/draw/entity/SubImage.js"></script>
-<script src="js/render/AtlasCache.js"></script>
-<script src="js/render/intern/draw/Renderer.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
-<script src="js/app/GameLoop.js"></script>
+<script src="js/platform/bootstrap/installCanvas.js"></script>
+<script src="js/input/bootstrap/installPushRelease.js"></script>
+<script src="js/screen/bootstrap/installResize.js"></script>
+<script src="js/input/bootstrap/installTap.js"></script>
+<script src="js/input/bootstrap/installKeyBoard.js"></script>
+<script src="js/input/bootstrap/installGamePad.js"></script>
+<script src="js/input/bootstrap/installKeyPushRelease.js"></script>
+<script src="js/input/bootstrap/installDragNDrop.js"></script>
 <script src="js/app/App.js"></script>
+<script src="js/app/bootstrap/Bootstrapper.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
