--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -24,7 +24,7 @@
 <script src="js/render/intern/motion/entity/Line.js"></script>
 <script src="js/render/intern/motion/entity/BezierCurve.js"></script>
 
-<script src="js/resizeutils/Repository.js"></script>
+<script src="js/utils/Repository.js"></script>
 <script src="js/resizeutils/changePath.js"></script>
 <script src="js/resizeutils/changeCoords.js"></script>
 <script src="js/resizeutils/changeTouchable.js"></script>
