basic splash screen visuals refs #35 - handle orientation

--- a/www/index.html
+++ b/www/index.html
@@ -134,6 +134,7 @@
 <script src="js/render/ImageCache.js"></script>
 <script src="js/render/AtlasCache.js"></script>
 
+<script src="js/scene/myscenes/SplashScreen.js"></script>
 <script src="js/scene/myscenes/Settings.js"></script>
 <script src="js/scene/myscenes/Credits.js"></script>
 <script src="js/utils/range.js"></script>
