lock screen orientation lil refactoring refs #35 - handle orientation #core

--- a/www/index.html
+++ b/www/index.html
@@ -75,6 +75,7 @@
 <script src="js/platform/requestAnimFrame.js"></script>
 <script src="js/platform/BrowserOracle.js"></script>
 <script src="js/platform/FullScreenController.js"></script>
+<script src="js/platform/ScreenOrientation.js"></script>
 
 <script src="js/input/entity/Touchable.js"></script>
 <script src="js/input/entity/Touchables.js"></script>
@@ -134,6 +135,7 @@
 <script src="js/render/ImageCache.js"></script>
 <script src="js/render/AtlasCache.js"></script>
 
+<script src="js/input/bootstrap/installOneTimeTap.js"></script>
 <script src="js/scene/myscenes/SplashScreen.js"></script>
 <script src="js/scene/myscenes/Settings.js"></script>
 <script src="js/scene/myscenes/Credits.js"></script>
