moved debug stuff #core

--- a/www/debug.html
+++ b/www/debug.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-<script src="stats.min.js"></script>
+<script src="debug/stats.min.js"></script>
 <script>
     var stats = new Stats();
     stats.setMode(0); // 0: fps, 1: ms
@@ -21,7 +21,7 @@
 
 </script>
 
-<script src="console-log-viewer.js"></script>
+<script src="debug/console-log-viewer.js"></script>
 
 <script src="js/lib/howler.js"></script>
 <script src="js/utils/iterateEntries.js"></script>
@@ -169,7 +169,7 @@
 <script src="js/scene/myscenes/StartingPosition.js"></script>
 <script src="js/scene/SceneManager.js"></script>
 <script src="js/scene/myscenes/installMyScenes.js"></script>
-<script src="DebugGameLoop.js"></script>
+<script src="debug/DebugGameLoop.js"></script>
 <script src="js/app/bootstrap/installLoop.js"></script>
 <script src="js/render/bootstrap/StageFactory.js"></script>
 <script src="js/render/bootstrap/AtlasResourceHelper.js"></script>
