--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
 <script src="js/utils/getFunctionName.js"></script>
 <script src="js/utils/Vectors.js"></script>
 <script src="js/screen/getDevicePixelRatio.js"></script>
+<script src="js/app/Event.js"></script>
 
 <script src="js/net/resolveAtlasPaths.js"></script>
 
