fixing empty screen - refactoring the event system (resize, orientation, full screen), ctx: refactoring stop & resume events for all scenes refs #35 - handle orientation #core

--- a/www/debug.html
+++ b/www/debug.html
@@ -22,7 +22,7 @@
 </script>
 
 <script src="debug/console-log-viewer.js"></script>
-
+<
 <script src="js/lib/howler.js"></script>
 <script src="js/utils/iterateEntries.js"></script>
 <script src="js/utils/iterateSomeEntries.js"></script>
@@ -30,6 +30,7 @@
 <script src="js/utils/getFunctionName.js"></script>
 <script src="js/utils/Vectors.js"></script>
 <script src="js/screen/getDevicePixelRatio.js"></script>
+<script src="js/app/Event.js"></script>
 
 <script src="js/net/resolveAtlasPaths.js"></script>
 
@@ -151,8 +152,12 @@
 <script src="js/render/AtlasCache.js"></script>
 
 <script src="js/input/bootstrap/installOneTimeTap.js"></script>
-<script src="js/scene/myscenes/SplashScreen.js"></script>
+<script src="js/screen/Orientation.js"></script>
 <script src="js/scene/myscenes/Settings.js"></script>
+<script src="js/scene/myscenes/showSettings.js"></script>
+<script src="js/scene/myscenes/SplashScreen.js"></script>
+<script src="js/scene/myscenes/RotateDevice.js"></script>
+<script src="js/scene/myscenes/GoFullScreen.js"></script>
 <script src="js/scene/myscenes/Credits.js"></script>
 <script src="js/utils/range.js"></script>
 <script src="js/scene/component/ObstaclesView.js"></script>
@@ -169,23 +174,31 @@
 <script src="js/scene/myscenes/StartingPosition.js"></script>
 <script src="js/scene/SceneManager.js"></script>
 <script src="js/scene/myscenes/installMyScenes.js"></script>
-<script src="debug/DebugGameLoop.js"></script>
-<script src="js/app/bootstrap/installLoop.js"></script>
+<script src="js/app/GameLoop.js"></script>
+
+// debug
+<script src="debug/installDebugLoop.js"></script>
+
 <script src="js/render/bootstrap/StageFactory.js"></script>
 <script src="js/render/bootstrap/AtlasResourceHelper.js"></script>
 <script src="js/render/bootstrap/ImageResourceHelper.js"></script>
 <script src="js/MyGameResources.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
+<script src="js/screen/OrientationHandler.js"></script>
+<script src="js/screen/FullScreenHandler.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
 <script src="js/platform/bootstrap/installCanvas.js"></script>
 <script src="js/input/bootstrap/installPushRelease.js"></script>
 <script src="js/screen/bootstrap/installResize.js"></script>
+<script src="js/screen/bootstrap/installOrientation.js"></script>
+<script src="js/screen/bootstrap/installFullScreen.js"></script>
 <script src="js/input/bootstrap/installTap.js"></script>
 <script src="js/input/bootstrap/installKeyBoard.js"></script>
 <script src="js/input/bootstrap/installGamePad.js"></script>
 <script src="js/input/bootstrap/installKeyPushRelease.js"></script>
 <script src="js/input/bootstrap/installDragNDrop.js"></script>
+<script src="js/app/EventBus.js"></script>
 <script src="js/app/App.js"></script>
 <script src="js/app/bootstrap/Bootstrapper.js"></script>
 <script src="js/main.js"></script>
