fixed position of drawables for iframe refs #44 #game

--- a/www/iframe.html
+++ b/www/iframe.html
@@ -8,7 +8,7 @@
 <iframe src="http://10.0.0.29:8080" width="500" height="500">
     <p>Your browser does not support iframes.</p>
 </iframe>
-<iframe src="http://10.0.0.29:8080" width="500" height="500" allowfullscreen
+<iframe src="http://localhost:63342/crappy-space-shooter/www/" width="500" height="500" allowfullscreen
         sandbox="allow-popups allow-same-origin allow-pointer-lock allow-scripts">
     <p>Your browser does not support iframes.</p>
 </iframe>
