fix issues with dependency management after merging #game

--- a/www/index.html
+++ b/www/index.html
@@ -129,6 +129,48 @@
 <script src="js/highfivejs/utils/range.js"></script>
 <script src="js/highfivejs/scene/component/ButtonFactory.js"></script>
 <script src="js/highfivejs/scene/SceneManager.js"></script>
+
+<!--my scenes start-->
+<script src="js/myscenes/viewhelper/ScoreBoard.js"></script>
+
+<script src="js/myscenes/component/CollectView.js"></script>
+<script src="js/myscenes/component/EnergyBarView.js"></script>
+<script src="js/myscenes/component/EnergyStateMachine.js"></script>
+<script src="js/myscenes/component/GameWorld.js"></script>
+<script src="js/myscenes/component/LevelGenerator.js"></script>
+<script src="js/myscenes/component/LivesView.js"></script>
+<script src="js/myscenes/component/ObstaclesView.js"></script>
+<script src="js/myscenes/component/ScoreView.js"></script>
+<script src="js/myscenes/component/Odometer.js"></script>
+<script src="js/myscenes/component/OdometerView.js"></script>
+<script src="js/myscenes/component/ShieldsHitView.js"></script>
+<script src="js/myscenes/component/ShipHitView.js"></script>
+<script src="js/myscenes/component/PlayFactory.js"></script>
+
+<script src="js/myscenes/viewhelper/Fire.js"></script>
+<script src="js/myscenes/viewhelper/drawBackGround.js"></script>
+<script src="js/myscenes/viewhelper/drawShields.js"></script>
+<script src="js/myscenes/viewhelper/drawShip.js"></script>
+<script src="js/myscenes/viewhelper/drawSpeedStripes.js"></script>
+<script src="js/myscenes/viewhelper/EnergyBar.js"></script>
+<script src="js/myscenes/viewhelper/drawSharedGameStuff.js"></script>
+
+<script src="js/myscenes/Settings.js"></script>
+<script src="js/myscenes/showSettings.js"></script>
+<script src="js/myscenes/Credits.js"></script>
+<script src="js/myscenes/GetReady.js"></script>
+<script src="js/myscenes/GoFullScreen.js"></script>
+<script src="js/myscenes/InGameTutorial.js"></script>
+<script src="js/myscenes/Intro.js"></script>
+<script src="js/myscenes/KillScreen.js"></script>
+<script src="js/myscenes/PlayGame.js"></script>
+<script src="js/myscenes/PostGame.js"></script>
+<script src="js/myscenes/PreGame.js"></script>
+<script src="js/myscenes/RotateDevice.js"></script>
+<script src="js/myscenes/SplashScreen.js"></script>
+<script src="js/myscenes/StartingPosition.js"></script>
+<!--my scenes end-->
+
 <script src="js/myscenes/installMyScenes.js"></script>
 <script src="js/highfivejs/app/GameLoop.js"></script>
 <script src="js/highfivejs/app/bootstrap/installLoop.js"></script>
