windows phone full screen no resize bug refs #60 #game

--- a/www/debug.html
+++ b/www/debug.html
@@ -158,6 +158,7 @@
 
 <script src="js/myscenes/Settings.js"></script>
 <script src="js/myscenes/showSettings.js"></script>
+<script src="js/myscenes/ShowSettingsEvented.js"></script>
 <script src="js/myscenes/Credits.js"></script>
 <script src="js/myscenes/GetReady.js"></script>
 <script src="js/myscenes/GoFullScreen.js"></script>
@@ -182,11 +183,13 @@
 <script src="js/highfivejs/screen/ResizeHandler.js"></script>
 <script src="js/highfivejs/screen/SimpleLoadingScreen.js"></script>
 <script src="js/highfivejs/screen/OrientationHandler.js"></script>
+<script src="js/highfivejs/screen/VisibilityHandler.js"></script>
 <script src="js/highfivejs/screen/FullScreenHandler.js"></script>
 <script src="js/highfivejs/net/ResourceLoader.js"></script>
 <script src="js/highfivejs/platform/bootstrap/installCanvas.js"></script>
 <script src="js/highfivejs/screen/bootstrap/installResize.js"></script>
 <script src="js/highfivejs/screen/bootstrap/installOrientation.js"></script>
+<script src="js/highfivejs/screen/bootstrap/installVisibility.js"></script>
 <script src="js/highfivejs/screen/bootstrap/installFullScreen.js"></script>
 <script src="js/highfivejs/input/bootstrap/installPointer.js"></script>
 <script src="js/highfivejs/input/bootstrap/installKeyBoard.js"></script>
