game improvements refs #54 #game

--- a/www/index.html
+++ b/www/index.html
@@ -133,6 +133,7 @@
 <script src="js/highfivejs/scene/SceneManager.js"></script>
 
 <!--my scenes start-->
+<script src="js/myscenes/component/checkAndSet30fps.js"></script>
 <script src="js/myscenes/viewhelper/ScoreBoard.js"></script>
 
 <script src="js/myscenes/component/CollectView.js"></script>
