menu refactoring kinda working refs #69 #game

--- a/www/index.html
+++ b/www/index.html
@@ -159,6 +159,7 @@
 <script src="js/myscenes/viewhelper/drawSharedGameStuff.js"></script>
 
 <script src="js/myscenes/Credits.js"></script>
+<script src="js/myscenes/Settings.js"></script>
 <script src="js/myscenes/Menu.js"></script>
 <script src="js/myscenes/showMenu.js"></script>
 <script src="js/myscenes/ShowMenuEvented.js"></script>
