first achievements draft refs #69 #game

--- a/www/index.html
+++ b/www/index.html
@@ -158,8 +158,13 @@
 <script src="js/myscenes/viewhelper/EnergyBar.js"></script>
 <script src="js/myscenes/viewhelper/drawSharedGameStuff.js"></script>
 
+<script src="js/myscenes/Achievements.js"></script>
 <script src="js/myscenes/Credits.js"></script>
 <script src="js/myscenes/Settings.js"></script>
+<script src="js/myscenes/PauseMenu.js"></script>
+<script src="js/myscenes/CompletedQuests.js"></script>
+<script src="js/myscenes/NextQuests.js"></script>
+<script src="js/myscenes/Shop.js"></script>
 <script src="js/myscenes/Menu.js"></script>
 <script src="js/myscenes/showMenu.js"></script>
 <script src="js/myscenes/ShowMenuEvented.js"></script>
