implements achievements refs #69 #game

--- a/www/index.html
+++ b/www/index.html
@@ -153,6 +153,13 @@
 <script src="js/myscenes/component/ShieldsHitView.js"></script>
 <script src="js/myscenes/component/ShipHitView.js"></script>
 <script src="js/myscenes/component/PlayFactory.js"></script>
+<script src="js/myscenes/component/achievement/checkCloser.js"></script>
+<script src="js/myscenes/component/achievement/checkConqueror.js"></script>
+<script src="js/myscenes/component/achievement/checkFasterThanLight.js"></script>
+<script src="js/myscenes/component/achievement/checkLiveOnce.js"></script>
+<script src="js/myscenes/component/achievement/checkShoppingQueen.js"></script>
+<script src="js/myscenes/component/achievement/checkStarGazer.js"></script>
+<script src="js/myscenes/component/checkAchievements.js"></script>
 
 <script src="js/myscenes/viewhelper/Fire.js"></script>
 <script src="js/myscenes/viewhelper/drawBackGround.js"></script>
