mission checker in action refs #69 #game

--- a/www/index.html
+++ b/www/index.html
@@ -162,6 +162,8 @@
 <script src="js/myscenes/component/achievement/checkShoppingQueen.js"></script>
 <script src="js/myscenes/component/achievement/checkStarGazer.js"></script>
 <script src="js/myscenes/component/checkAchievements.js"></script>
+<script src="js/myscenes/component/Missions.js"></script>
+<script src="js/myscenes/component/MissionControl.js"></script>
 
 <script src="js/myscenes/viewhelper/Fire.js"></script>
 <script src="js/myscenes/viewhelper/drawBackGround.js"></script>
