adds better performance measuring plus low performance mode for weak devices refs #69 #game

--- a/www/debug.html
+++ b/www/debug.html
@@ -57,6 +57,12 @@
 <script src="js/highfivejs/platform/UniversalTranslator.js"></script>
 <script src="js/highfivejs/platform/addFontToDOM.js"></script>
 <script src="js/highfivejs/platform/requestAnimFrame.js"></script>
+<script src="js/highfivejs/platform/storage/lclStorage.js"></script>
+<script src="js/highfivejs/platform/storage/loadBoolean.js"></script>
+<script src="js/highfivejs/platform/storage/loadInteger.js"></script>
+<script src="js/highfivejs/platform/storage/loadString.js"></script>
+<script src="js/highfivejs/platform/storage/loadObject.js"></script>
+<script src="js/highfivejs/platform/storage/saveObject.js"></script>
 <script src="js/highfivejs/platform/DeviceInfo.js"></script>
 <script src="js/highfivejs/screen/FullScreenController.js"></script>
 <script src="js/highfivejs/screen/OrientationLock.js"></script>
@@ -131,6 +137,7 @@
 <script src="js/highfivejs/scene/SceneManager.js"></script>
 
 <!--my scenes start-->
+<script src="js/myscenes/component/checkAndSet30fps.js"></script>
 <script src="js/myscenes/viewhelper/ScoreBoard.js"></script>
 
 <script src="js/myscenes/component/CollectView.js"></script>
@@ -146,6 +153,15 @@
 <script src="js/myscenes/component/ShieldsHitView.js"></script>
 <script src="js/myscenes/component/ShipHitView.js"></script>
 <script src="js/myscenes/component/PlayFactory.js"></script>
+<script src="js/myscenes/component/achievement/checkCloser.js"></script>
+<script src="js/myscenes/component/achievement/checkConqueror.js"></script>
+<script src="js/myscenes/component/achievement/checkFasterThanLight.js"></script>
+<script src="js/myscenes/component/achievement/checkLiveOnce.js"></script>
+<script src="js/myscenes/component/achievement/checkShoppingQueen.js"></script>
+<script src="js/myscenes/component/achievement/checkStarGazer.js"></script>
+<script src="js/myscenes/component/checkAchievements.js"></script>
+<script src="js/myscenes/component/Missions.js"></script>
+<script src="js/myscenes/component/MissionControl.js"></script>
 
 <script src="js/myscenes/viewhelper/Fire.js"></script>
 <script src="js/myscenes/viewhelper/drawBackGround.js"></script>
@@ -155,10 +171,16 @@
 <script src="js/myscenes/viewhelper/EnergyBar.js"></script>
 <script src="js/myscenes/viewhelper/drawSharedGameStuff.js"></script>
 
+<script src="js/myscenes/GetReadyTutorial.js"></script>
+<script src="js/myscenes/Achievements.js"></script>
+<script src="js/myscenes/Credits.js"></script>
+<script src="js/myscenes/Settings.js"></script>
+<script src="js/myscenes/PauseMenu.js"></script>
+<script src="js/myscenes/CompletedQuests.js"></script>
+<script src="js/myscenes/NextQuests.js"></script>
 <script src="js/myscenes/Menu.js"></script>
 <script src="js/myscenes/showMenu.js"></script>
 <script src="js/myscenes/ShowMenuEvented.js"></script>
-<script src="js/myscenes/Credits.js"></script>
 <script src="js/myscenes/GetReady.js"></script>
 <script src="js/myscenes/GoFullScreen.js"></script>
 <script src="js/myscenes/InGameTutorial.js"></script>
@@ -166,6 +188,7 @@
 <script src="js/myscenes/KillScreen.js"></script>
 <script src="js/myscenes/PlayGame.js"></script>
 <script src="js/myscenes/PostGame.js"></script>
+<script src="js/myscenes/Shop.js"></script>
 <script src="js/myscenes/PreGame.js"></script>
 <script src="js/myscenes/RotateDevice.js"></script>
 <script src="js/myscenes/SplashScreen.js"></script>
