make custom pause button refs #74 #game

--- a/www/index.html
+++ b/www/index.html
@@ -172,6 +172,7 @@
 <script src="js/myscenes/viewhelper/drawSpeedStripes.js"></script>
 <script src="js/myscenes/viewhelper/EnergyBar.js"></script>
 <script src="js/myscenes/viewhelper/drawSharedGameStuff.js"></script>
+<script src="js/myscenes/viewhelper/drawPauseButton.js"></script>
 
 <script src="js/myscenes/GetReadyTutorial.js"></script>
 <script src="js/myscenes/Achievements.js"></script>
