shop tutorial refs #74 #game

--- a/www/index.html
+++ b/www/index.html
@@ -176,6 +176,7 @@
 
 <script src="js/myscenes/GetReadyTutorial.js"></script>
 <script src="js/myscenes/EnergyTutorial.js"></script>
+<script src="js/myscenes/ShopTutorial.js"></script>
 <script src="js/myscenes/Achievements.js"></script>
 <script src="js/myscenes/Credits.js"></script>
 <script src="js/myscenes/Settings.js"></script>
